[package]
name = "my_agent_app"
version = "0.1.0"
edition = "2021"

[dependencies]
my_agent_sdk = { path = "../my_agent_sdk" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
eframe = "0.34.3"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.44"
serde_json = "1.0.150"
